--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{
-  "dependencies": {
+﻿{
+  "private": true,
+  "devDependencies": {
     "browser-sync": "^1.8.3",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
@@ -11,7 +12,7 @@
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.2",
     "jshint-stylish": "^1.0.0",
-    "nib": "~1.1.0"
-  },
-  "private": true
+    "nib": "~1.1.0",
+    "gulp-strip-debug": "^1.0.2"
+  }
 }
