--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
-﻿{
-  "private": true,
+{
+  "name": "devgamejs",
+  "version": "0.1.0",
+  "description": "game engine",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/formatcom/devGameJS.git"
+  },
+  "author": "Vinicio Valbuena",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/formatcom/devGameJS/issues"
+  },
+  "homepage": "https://github.com/formatcom/devGameJS#readme",
   "devDependencies": {
     "browser-sync": "^1.8.3",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.4.2",
     "gulp-jshint": "^1.9.2",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.8",
     "gulp-rename": "^1.2.0",
+    "gulp-strip-debug": "^1.0.2",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.2",
     "jshint-stylish": "^1.0.0",
-    "nib": "~1.1.0",
-    "gulp-strip-debug": "^1.0.2"
+    "nib": "^1.1.0"
   }
 }
