--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.4.2",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.2",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.8",
