--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "game engine",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/karma start test/karma.config.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,13 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.2",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^1.0.0",
-    "nib": "^1.1.0"
+    "karma": "^0.13.9",
+    "karma-coverage": "^0.5.2",
+    "karma-htmlfile-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "nib": "^1.1.0",
+    "phantomjs": "^1.9.18"
   }
 }
