--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "devgamejs",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "game engine",
-  "main": "gulpfile.js",
+  "main": "devGame.js",
   "scripts": {
-    "test": "node_modules/.bin/karma start test/karma.config.js"
+    "bundle":"browserify --standalone DevGame --transform coffeeify --extension=coffee src/index.coffee --outfile devGame.js",
+    "build":"coffee --compile --output dist/ src/",
+    "clean":"rm -rf dist *.log"
   },
   "repository": {
     "type": "git",
@@ -17,27 +19,8 @@
   },
   "homepage": "https://github.com/formatcom/devGameJS#readme",
   "devDependencies": {
-    "browser-sync": "^1.8.3",
-    "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.4.2",
-    "gulp-if": "^1.2.5",
-    "gulp-jshint": "^1.9.2",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-minify-html": "^0.1.8",
-    "gulp-rename": "^1.2.0",
-    "gulp-strip-debug": "^1.0.2",
-    "gulp-stylus": "^1.3.4",
-    "gulp-uglify": "^1.0.2",
-    "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.13.9",
-    "karma-coverage": "^0.5.2",
-    "karma-htmlfile-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "nib": "^1.1.0",
-    "path": "^0.11.14",
-    "phantomjs": "^1.9.18"
+    "browserify": "^13.0.0",
+    "coffee-script": "^1.10.0",
+    "coffeeify": "^2.0.1"
   }
 }
