se cambio dist a bin

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "devGame.js",
   "scripts": {
     "bundle": "browserify --standalone DEVGAME --transform coffeeify --extension=coffee src/index.coffee --outfile devGame.js",
-    "build": "coffee --compile --output dist/ src/",
-    "clean": "rm -rf dist *.log"
+    "build": "npm run clean && coffee --compile --output bin/ src/",
+    "clean": "rm -rf bin *.log && mkdir bin"
   },
   "repository": {
     "type": "git",
